--- a/ApiFlask/templates/index.html
+++ b/ApiFlask/templates/index.html
@@ -4,13 +4,15 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>ToDo App</title>
+		<title>Iot Ecuador</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="{{ url_for('static', filename='flatly.min.css') }}" />
 		<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}" />
+
 
 		<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -21,32 +23,91 @@
 	</head>
 	<body>
 
-		<div class="container-fluid" id="wrapper">
-			
-			<div class="row">
-				<div class="col-lg-4 col-lg-offset-4" id="content">
-					<h2>Search</h2>
 
+		<div class="topnav">
+			<a class="active" href="#home">Home</a>
+			<a href="#about">About</a>
+			<a href="#contact">Contact</a>
+			<div class="search-container">
+			  <form action="{{ url_for('filter_info') }}" method="POST" role="form">
+				<div>  
+				<select id="cars" name="parameter">
+					<option value="Dirección">Dirección: </option>
+					<option value="Puerto">Puerto: </option>
+					<option value="Cuidad" >Cuidad:</option>
+				  </select>
+				
+				<input type="text" placeholder="¿Qué deseas buscar?" name="filter">
 
-					<ul class="list-group t20">
-						{% for todo in todos %}
-						<a href="{{ url_for('complete', oid=todo._id )}}">
-							<li class="list-group-item {% if todo.complete %}todo-completed{% endif %}">
-								{{ todo.Direccion }}
-							</li>
-						</a>
-						{% endfor %}
-					</ul>
-				</div>
 			</div>
+				<button type="submit"><i class="fa fa-search"></i></button>
+			  </form>
+			</div>
+		  </div>
+		  
 
-			<footer>
-				<div class="row pad">
-					<div class="col-lg-12 text-center">
-						Copyright &copy; 2020 <strong>Crecimiento Adaptable</strong>
-					</div>
-				</div>
-			</footer>
+		<div>
+			<span>{{msgs}}</span>
+
 		</div>
+
+		<div class="container-fluid" id="wrapper">
+			<div class="row">
+				<div class="col-md-12">
+				  <div class="card  card-plain">
+					<div class="card-header">
+					  <h4 class="card-title"> Lista de Direcciones Ipv4</h4>
+					  <p class="category"> Cantidad de busquedas: {{ cantidades }}</p>
+					  
+					</div>
+					<div class="card-body">
+					  <div class="table-responsive">
+						<table class="table tablesorter " id="">
+						  <thead class=" text-primary">
+							<tr>
+								<th>Dirección</th>
+								<th>Cuidad</th>
+								<th>Fecha</th>
+								<th>Puertos</th>
+							  </tr>
+							</thead>
+
+							{% for filter in filters %}
+
+							<tbody>
+
+							  <tr>
+								
+								<td >
+									<a href="{{ url_for('get_info', id= filter._id )}}">
+										{{ filter.Direccion }} 
+									</a>
+								</td>
+								
+								<td>{{ filter.Locatizacion.city }}</td>
+								<td>{{ filter.Fecha }}</td>
+
+								
+								<td>
+									
+										{% for x in filter.puerto %}
+										{{x.Puerto}}
+										{% endfor %}
+								
+								</td>
+							</tr>
+
+							</tbody>
+							
+						{% endfor %}
+						</table>
+					  </div>
+					</div>
+				  </div>
+				</div>
+			  </div>
+
+
+			
 	</body>
 </html>
