--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -7,8 +7,11 @@
      
     <!-- Styles -->
     <link href="static/css/gestion.css" rel="stylesheet">
-    <link href="static/css/dashboard.css" rel="stylesheet">
+    <link href="static/css/autenticar.css" rel="stylesheet">
+    <link href="static/css/tabla.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/9fe26e1c40.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
