--- a/ApiFlask/templates/Access/index.html
+++ b/ApiFlask/templates/Access/index.html
@@ -22,60 +22,60 @@
 
 <section class="portafolio">
   <div class="contenedor"equipos>
-      <h2 class="titulo">Busqueda</h2>
+      <h2 class="titulo">Aparatos IoT</h2>
       <div class="galeria-port">
           <div class="imagen-port">
-              <img src="static/img/iot.jpg"  alt="">
+              <img src="static/img/camara.png"  alt="" style="width: 200px; height: 200px;">
               <div class="hover-galeria">
                   <p>camara web</p>
               </div>
           </div>
           <div class="imagen-port">
-              <img src="static/img/iot1.jpg"  alt="">
+              <img src="static/img/controlador.jpg"  alt="" style="height: 200px; width: 200px;">
               <div class="hover-galeria">
                   
-                  <p>Servidores</p>
+                  <p>Controlador de tiras led Wifi</p>
               </div>
           </div>
           <div class="imagen-port">
-              <img src="static/img/iot2.jpg"  alt="">
+              <img src="static/img/enchufe.jpg"  alt="" style="height: 200px; width: 200px;">
               <div class="hover-galeria">
                   
-                  <p>router</p>
+                  <p>Enchufe inteligente Wifi</p>
               </div>
           </div>
           <div class="imagen-port">
-              <img src="static/img/iot.jpg"  alt="">
+              <img src="static/img/foco.jpg"  alt="" style="height: 200px; width: 200px;">
               <div class="hover-galeria">
                   
-                  <p>Nuestro trabajo</p>
+                  <p>Foco inteligente Wifi</p>
               </div>
           </div>
           <div class="imagen-port">
-              <img src="static/img/iot1.jpg"  alt="">
+              <img src="static/img/interruptor.png"  alt="" style="height: 200px; width: 200px;">
               <div class="hover-galeria">
                   
-                  <p>Nuestro trabajo</p>
+                  <p>Interruptor inteligente  Wifi</p>
               </div>
           </div>
           <div class="imagen-port">
-              <img src="static/img/iot2.jpg"  alt="">
+              <img src="static/img/google.jpg"  alt="" style="height: 200px; width: 200px;">
               <div class="hover-galeria">
                   
-                  <p>Nuestro trabajo</p>
+                  <p>Google Home</p>
               </div>
           </div>
           <div class="imagen-port">
-              <img src="static/img/iot.jpg"  alt="">
+              <img src="static/img/videoportero.jpg"  alt="" style="height: 200px; width: 200px;">
               <div class="hover-galeria">
                   
-                  <p>Nuestro trabajo</p>
+                  <p>Videoportero Ip</p>
               </div>
           </div>
           <div class="imagen-port">
-              <img src="static/img/iot1.jpg"  alt="">
+              <img src="static/img/climatizacion.jpg"  alt="" style="height: 200px; width: 200px;">
               <div class="hover-galeria">
-                  <p>Nuestro trabajo</p>
+                  <p>Climatización y calefacción</p>
               </div>
           </div>
       </div>
@@ -86,7 +86,7 @@
 <h2 class="titulo">Acerca de nosotros</h2>
 <div class="cards">
     <div class="card">
-        <img src="static/img/iot1.jpg" alt="">
+        <img src="static/img/jefferson.jpg" alt="">
         <div class="contenido-texto-card">
             <h4>Jefferson Llumiquinga</h4>
             <p>Tecnólogo en Análisis de Sistemas Informáticos</p>
