--- a/ApiFlask/templates/Access/login.html
+++ b/ApiFlask/templates/Access/login.html
@@ -9,16 +9,16 @@
     </div>
 {% endif %}
 
-<form action="" method="post">
-  <div class="form-group">
-      <label for="InputEmail">Email address</label>
+<form action="" method="post" class="registro">
+  <div class="input-contenedor">
+    <i class="fas fa-envelope-square icon"></i>
       <input name="email" class="form-control" id="InputEmail"  placeholder="Enter email">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      
   </div>
-    <div class="form-group">
-      <label for="InputPassword">Password</label>
+    <div class="input-contenedor">
+      <i class="fas fa-key icon"></i>
       <input type="password" name="password" class="form-control" id="InputPassword" placeholder="Password">
   </div>
-  <button type="submit" class="btn btn-primary">Submit</button>
+  <button type="submit" class="button">Login</button>
 </form>
 {% endblock %}
