--- a/ApiFlask/templates/Dashboard/home.html
+++ b/ApiFlask/templates/Dashboard/home.html
@@ -1,8 +1,8 @@
 {% extends "Access/base.html" %}{% block content %}
 
-<div class="search-container">
+<div class="box">
   <form action="{{ url_for('filter_info') }}" method="POST" role="form">
-    <div>
+    
       <select id="cars" name="parameter">
         <option value="Dirección">Dirección:</option>
         <option value="Puerto">Puerto:</option>
@@ -10,16 +10,17 @@
       </select>
 
       <input type="text" placeholder="¿Qué deseas buscar?" name="filter" />
-    </div>
-    <button type="submit"><i class="fa fa-search"></i></button>
+      <input type="submit" name="" value="Search">
+    
+    
   </form>
 </div>
 
-<div>
+<div class="saludo">
   <p>Hola! has iniciado sesion {{ email }}</p>
 </div>
 
-<div class="container-fluid" id="wrapper">
+<div class="container-fluid" id="main-container">
   <div class="row">
     <div class="col-md-12">
       <div class="card card-plain">
@@ -29,7 +30,7 @@
         </div>
         <div class="card-body">
           <div class="table-responsive">
-            <table class="table table-striped table-dark">
+            <table >
               <thead>
                 <tr>
                   <th>Dirección</th>
@@ -63,5 +64,6 @@
     </div>
   </div>
 </div>
+
 
 {% endblock %}
