--- a/ApiFlask/static/css/gestion.css
+++ b/ApiFlask/static/css/gestion.css
@@ -96,7 +96,8 @@
       background-color: var(--color-info-700);
       color: var(--color-info-100);
       border: 50px;
-      padding-bottom: 200px;
+      padding-bottom: 150px;
+      padding-left: 0px;
       
   }
   
