--- a/ApiFlask/static/css/tabla.css
+++ b/ApiFlask/static/css/tabla.css
@@ -1,10 +1,8 @@
 #main-container{
     width: 1000px;
-    margin: auto;
+    margin: 120px auto;
 }
-.saludo{
-    margin: 100px auto;
-}
+
 table{
     background-color: #ddd;
     text-align: left;
@@ -39,6 +37,9 @@ h4{
     font-family: 'Courier New', Courier, monospace;
     font-size: 20px; 
 }
+h5{
+    color: white;
+}
 .category{
     text-align: center;
     color: black;
@@ -46,7 +47,7 @@ h4{
 .box{
     position: absolute;
     left: 10%;
-   top: 30%;
+   top: 70%;
     transform: translate(-10%, -30%);
 }
 input{
@@ -94,4 +95,11 @@ input[type="submit"]{
 input[type="submit"]:hover{
     background: #369681;
     
+}
+#lista{
+    color: white;
+}
+h6{
+    color: white;
+    font-size: 20px;
 }
