--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head><meta charset="utf-8">
-  <title>{% block title %}iot ecuador{%endblock %}</title>
+  <title>{% block title %}IoT ecuador{%endblock %}</title>
     <!-- Bootstrap -->
     <link href="static/vendor/bootstrap/css/bootstrap.min.css'" rel="stylesheet">
      
@@ -9,6 +9,7 @@
     <link href="static/css/gestion.css" rel="stylesheet">
     <link href="static/css/autenticar.css" rel="stylesheet">
     <link href="static/css/tabla.css" rel="stylesheet">
+    <link href="static/css/blog.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/9fe26e1c40.js" crossorigin="anonymous"></script>
@@ -16,6 +17,7 @@
 
 <body>
   <!-- Navbar -->
+
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
      <div class="container">
        <a class="navbar-brand" href="/">Iot_Ecuador</a>
@@ -31,6 +33,7 @@
             <a class="nav-link text-uppercase text-expanded" href="/Dashboard">Dashboard</a>
           </li>
           
+          
           <li class="nav-item active px-lg-4">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -41,6 +44,8 @@
               <a class="dropdown-item" href="/logout">Salir</a>
             </div>
           </li>
+
+          
          
 
           {% else %}
