--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -30,7 +30,7 @@
            
           {% if assets%}
           <li class="nav-item active px-lg-4">
-            <a class="nav-link text-uppercase text-expanded" href="/Dashboard">Dashboard</a>
+            <a class="nav-link text-uppercase text-expanded" href="/dashboard">Dashboard</a>
           </li>
           
           
