--- a/ApiFlask/templates/Dashboard/home.html
+++ b/ApiFlask/templates/Dashboard/home.html
@@ -6,9 +6,11 @@
       <div class="card-body">
         <h5 class="card-title">Direcciones IPv4 asignadas para ecuador </h5>
         <h6># Direcciones IPv4 dentro de territorio Ecuatoriano</p>
-        <li class="lista">2,780,345 </li>
-        <h6># Direcciones IPv4 almacenadas</p>
-          <li class="lista">8227</li>
+          <li class="lista">2,780,345 </li>
+        <h6># Direcciones IPv4 encontradas: </p>
+          {% for data in datos %}
+          <li class="lista">{{ data.AllIPv4 }}</li>
+          {%endfor%}
           <a href="https://lite.ip2location.com/ecuador-ip-address-ranges?lang=es" class="btn btn-primary" target="_blank">Ver más >></a>
       </div>
     </div>
@@ -41,17 +43,43 @@
 
       <input type="text" placeholder="¿Qué deseas buscar?" name="filter" />
       <input type="submit" name="" value="Search">
-    
-    
+
   </form>
 </div>
+
+
+
+
+  <div class="saludo">
+    <p>Hola! has iniciado sesion {{users}}</p>
+  </div>
+
+
+  {% if msgs %}
+  <div class="saludo">
+    <p>{{ msgs }}</p>
+  </div>
+  {% endif %}
+
+
+
+  {% if error %}
+  <div class="error">
+    <p>{{ error }}</p>
+  </div>
+  {% else %}
+  <p>{{ error }}</p>
+
 <div class="container-fluid" id="main-container">
   <div class="row">
     <div class="col-md-12">
       <div class="card card-plain">
         <div class="card-header">
           <h4 class="card-title">Lista de Direcciones Ipv4</h4>
-          <p class="category">Cantidad de busquedas: {{ cantidades }}</p>
+          {% for data in datos %}
+          <p class="category">Se ha encontrado : {{ data.PuertoTrue }} Direcciones</p>
+          {% endfor %}
+
         </div>
         <div class="card-body">
           <div class="table-responsive">
@@ -68,16 +96,33 @@
               <tbody>
                 <tr>
                   <td>
-                    <a href="{{ url_for('get_info', id= filter._id )}}">
+                    
+
+                    {%if filter.Estado ==  False%}
+                    {{ filter.Direccion }}
+                    {% else %}
+                    <a href="{{ url_for('get_ipv4', id= filter._id)}}">
                       {{ filter.Direccion }}
                     </a>
+                    {% endif %}
                   </td>
 
-                  <td>{{ filter.Locatizacion.city }}</td>
+                  <td>
+                    
+                    {{ filter.Locatizacion.city }}
+                    
+                </td>
                   <td>{{ filter.Fecha }}</td>
 
                   <td>
-                    {% for x in filter.puerto %} {{x.Puerto}} {% endfor %}
+                    {%if filter.Estado ==  False%}
+                      No hay Puertos
+                    {% else %}
+                    {% for x in filter.puerto %} 
+                    {{x.Puerto}} 
+                    {% endfor %}
+                    {% endif %}
+
                   </td>
                 </tr>
               </tbody>
@@ -89,6 +134,6 @@
     </div>
   </div>
 </div>
-
+{% endif %}
 
 {% endblock %}
