--- a/ApiFlask/templates/Dashboard/busqueda.html
+++ b/ApiFlask/templates/Dashboard/busqueda.html
@@ -10,11 +10,11 @@
               <ul class="list-group">
 
                 <li class="list-group-item">Fecha: {{item.Fecha}} </li>
-                <li class="list-group-item">Pais: {{item.Locatizacion.country_name}}</li>
-                <li class="list-group-item">Ciudad: {{item.Locatizacion.city}}</li>
-                <li class="list-group-item">Codigo: {{item.Locatizacion.region_code}}</li>
-                <li class="list-group-item">Latitud: {{item.Locatizacion.latitude}}</li>
-                <li class="list-group-item">Latitud: {{item.Locatizacion.longitude}}</li>
+                <li class="list-group-item">Pais: {{item.Localizacion.country_name}}</li>
+                <li class="list-group-item">Ciudad: {{item.Localizacion.city}}</li>
+                <li class="list-group-item">Codigo: {{item.Localizacion.region_code}}</li>
+                <li class="list-group-item">Latitud: {{item.Localizacion.latitude}}</li>
+                <li class="list-group-item">Latitud: {{item.Localizacion.longitude}}</li>
 				<li class="list-group-item">********************************</li>
 				<li class="list-group-item">Dominio: {{item.Dominio}}</li>
 				<li class="list-group-item">Dns: {{item.Dns}}</li>
