--- a/ApiFlask/templates/Dashboard/city.html
+++ b/ApiFlask/templates/Dashboard/city.html
@@ -1,7 +1,7 @@
 {% extends "Access/base.html" %}{% block content %}
 
 {% for item in items%}
-<h1>city: {{item.Locatizacion.city}} </h1>
+<h1>city: {{item.Localizacion.city}} </h1>
 {% endfor%}
 
 {% endblock %}
