--- a/ApiFlask/templates/Dashboard/home.html
+++ b/ApiFlask/templates/Dashboard/home.html
@@ -121,7 +121,7 @@
 
                   <td>
                     
-                    {{ filter.Locatizacion.city }}
+                    {{ filter.Localizacion.city }}
                     
                 </td>
                   <td>{{ filter.Fecha }}</td>
