--- a/ApiFlask/templates/Access/register.html
+++ b/ApiFlask/templates/Access/register.html
@@ -16,8 +16,15 @@
   <div class="input-contenedor">
         
         <i class="fas fa-user icon"></i>
-        <input name="fullname" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Ingrese su nombre completo">
+        <input name="name" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Ingrese sus nombres completos">
         
+  </div>
+
+  <div class="input-contenedor">
+        
+    <i class="fas fa-user icon"></i>
+    <input name="lastname" class="form-control" id="inputFullName" aria-describedby="emailHelp" placeholder="Ingrese sus Apellidos completos">
+    
   </div>
   
   <div class="input-contenedor">
@@ -26,16 +33,25 @@
         <input name="email" class="form-control" id="InputEmail"  placeholder="Ingrese un email">
         
   </div>
+
+  <div class="input-contenedor">
+        
+    <i class="fas fa-envelope-square icon"></i>
+    <input name="texto" class="form-control" id="InputEmail"  placeholder="¿Por qué desea usar la aplicación?">
+    
+</div>
+
   <div class="input-contenedor">
     
     <i class="fas fa-key icon"></i>
-    <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Ingrese su contraseña">
+    <input type="password" name="password1" class="form-control" id="InputPassword" placeholder="Ingrese la contraseña">
   </div>
+
 
     <div class="input-contenedor">
     
     <i class="fas fa-key icon"></i>
-    <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repita su contraseña">
+    <input type="password" name="password2" class="form-control" id="InputPassword2" placeholder="Repita la contraseña">
 
     </div>
   <button type="submit" class="button">Registrate</button>
