--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -30,16 +30,22 @@
        <div class="collapse navbar-collapse" id="navbarResponsive">
          <ul class="navbar-nav mx-auto">
            
-          {% if assets%}
+          {% if current_user.is_authenticated%}
+
+            {% if current_user.role == 'admin' %}
+      
+            <li class="nav-item active px-lg-4">
+              <a class="nav-link text-uppercase text-expanded" href="/admin_panel">User Control Panel </a>
+            </li>
+            {%endif%}
+
           <li class="nav-item active px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="/dashboard">Dashboard</a>
           </li>
-          
-          
           <li class="nav-item active px-lg-4">
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Cuenta
+               Cuenta
               </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
               <a class="dropdown-item" href="/setting">Configuración</a>
