--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -48,7 +48,8 @@
                Cuenta
               </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-              <a class="dropdown-item" href="/setting">Configuración</a>
+              <a class="dropdown-item" href="/profile">Perfil</a>
+              <a class="dropdown-item" href="/password">Contraseña</a>
               <a class="dropdown-item" href="/logout">Salir</a>
             </div>
           </li>
