--- a/ApiFlask/templates/Access/register.html
+++ b/ApiFlask/templates/Access/register.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 {% if message  %}
-    <div class="alert alert-secondary" role="alert">
+    <div class="alert alert-secondary" id="mensaje" role="alert">
         <p>{{ message }}</p>
     </div>
 {% endif %}
