--- a/ApiFlask/templates/Dashboard/home.html
+++ b/ApiFlask/templates/Dashboard/home.html
@@ -119,8 +119,8 @@
 
                   <td>
                     
-                    {{ filter.Localizacion.city }}
-                    
+                    {{ filter['filter.Localizacion.city']  }}
+
                 </td>
                   <td>{{ filter.Fecha }}</td>
 
