--- a/ApiFlask/templates/Access/base.html
+++ b/ApiFlask/templates/Access/base.html
@@ -10,9 +10,17 @@
     <link href="static/css/autenticar.css" rel="stylesheet">
     <link href="static/css/tabla.css" rel="stylesheet">
     <link href="static/css/blog.css" rel="stylesheet">
+    <link  href="static/css/map.css" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
     <script src="https://kit.fontawesome.com/9fe26e1c40.js" crossorigin="anonymous"></script>
+
+    <!--Map script-->
+    <script src="https://code.highcharts.com/maps/highmaps.js"></script>
+    <script src="https://code.highcharts.com/maps/modules/exporting.js"></script>
+    <script src="https://code.highcharts.com/mapdata/countries/ec/ec-all.js"></script>
+    
+
     <!-- import plugin script -->
   <script src='static/Chart.min.js'></script>
 </head>
